--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
             <div class="logo">
                 <a href="index.html">
-                    <p><span style="font-weight: bold;">DANIEL WALTER SCOTT</span>&nbsp;| LOGO DESIGN</p> 
+                    <p><span style="font-weight: bold;">FERRET STUDIOS</span>&nbsp;| LOGO DESIGN</p> 
                 </a>
                 
 
