FS website update

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferret Studios | Privacy Policy</title>
-    <meta name="description" content="Ferret Studios Home Page">
+    <meta name="description" content="Ferret Studios Contact Page">
 	
-	<link rel="icon" type="" href="FS Icon 64.png" >
+		<link rel="icon" type="" href="FS Icon 64.png" >
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
@@ -75,116 +75,85 @@
             </div>
         </header>
 
+        <div>
+            <div class="PPLetter ">
 
-        <main>
-            <div class="row mt-5 mb-5 HPIntro">
+                <!-- Page Title -->
+                <div class="row">
 
-                <div class="col">
-
-                    <div>
-                        <img src="images/FS Icon 256.png" class="img-fluid oddPictureShadowBlack"
-                            alt="Ferret Studios Logo" width="100">
-                    </div>
-
-                    <div class="mb-5 mt-1">
-                        <img src="images/Basic Logo4 cropped.png" class="img-fluid " alt="Ferret Studios Logo"
-                            width="500">
-                    </div>
-
-                    <div>
-                        <h5 style="font-weight: 400;">Hi! We're a mobile game studio bringing retro gameplay back to the
-                            Google Play Store.</h5>
-                        <h5 style="font-weight: 400;">We do the same thing here with fresh and updated takes on older
-                            gameplay concepts.</h5>
+                    <div class="ms-5 PPTextSpace">
+                        <h3 class=" textShadow  ">Contact</h3>
+                        <h5 class="light">Send us an email</h5>
                     </div>
 
                 </div>
 
+                <div class="row PPTextSpaceTitle mb-5">
 
-            </div>
+                    <div class="col-12">
+
+                        <h6>Fullname *</h6>
+                        <input type="text" placeholder="  Name...">
+
+                    </div>
+
+                    <div class="col-12 mt-4">
+
+                        <h6>Email *</h6>
+                        <input type="text" placeholder="  Email...">
+
+                    </div>
+
+                    <div class="col-12 mt-4">
+
+                        <h6>Phone Number</h6>
+                        <input type="text" placeholder="  Phone Number...">
+
+                    </div>
 
 
-        </main>
+                    <div class="col-5 mt-4 mb-4 d-flex ">
 
-
-        <main class="row">
-
-            <div class="row banner">
-
-
-                <div class="col-6 ">
-                    <div class="ps-5">
-                        <h3 class="bold mt-5">Cube Dropper</h3>
-                        <h5 class="textShadow">Following the tale of Cube! You fight against the evil wizard Artemus who
-                            seems to hate and fear
-                            you.
-                            Why is this? Watch him close and you may find out. A story of power can never end well if
-                            control
-                            is the only desire.</h5>
-                        <div> <img src="images/cubedropper-screenshot (1).png"
-                                class="img-fluid bannerImg pictureBoxShadow" alt="Cube Dropper Gameplay" width="575">
+                        <div>
+                            <h6>Message *</h6>
+                            <textarea style="min-height: 9rem;" type="text" placeholder="  Message..."> </textarea>
                         </div>
-                        <p class="d-inline-flex align-bottom">Genre: Action, Arcade</p>
-                        <div> <img src="images/google-play-badge.png" class="img-fluid mt-2 mb-3 oddPictureShadow"
-                                alt="Google Play Badge" width="161.5">
+
+                        <div style="margin-top: 110px;" class="col-3 ">
+                            <button class="btnShadow ">
+                                Submit
+                            </button>
                         </div>
+
                     </div>
 
+
+                    <div class=" col-12 mt-5 d-none d-lg-block">
+
+                        <h4 class="ms-5 mb-4">Location in Gloucestershire, England 🇬🇧</h4>
+
+                        <iframe class="btnShadow mapBorder "
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78832.08147630758!2d-2.243963944863404!3d51.87003857310303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48705335954a60bd%3A0x37ec886359412762!2sGloucestershire!5e0!3m2!1sen!2suk!4v1683558046412!5m2!1sen!2suk"
+                            width="928" height="464" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+
+                    </div>
+
+
                 </div>
 
-                <div class="col-6 mt-5 pe-5 d-flex flex-row-reverse align-self-start">
-
-                    <img style="position:relative; right:10px;" src="images/App Logo Square.png"
-                        class="img-fluid oddPictureShadow " alt="Ferret Studios Logo" width="150">
-                </div>
 
             </div>
 
-        </main>
+            <div class="row pageBottom"></div>
+        </div>
 
 
 
-        <section>
-
-            <div class="row d-none d-sm-block">
-
-                <div class="col d-flex justify-content-around">
-
-                    <div class="sectionBoxInvis"></div>
-
-                    <a href="about.html">
-                        <button class="sectionBox text-center">
-
-                            <img src="images/book-open-text.svg" class="img-fluid " alt="Ferret Studios Logo"
-                                width="200" height="200">
 
 
-
-                            <h3 class="ms-3 ">About</h3>
-
-
-                        </button>
-                    </a>
-
-                    <a href="#">
-                        <button class="sectionBox text-center">
-
-                            <img src="images/game-controller.svg" class="img-fluid " alt="Ferret Studios Logo"
-                                width="200" height="200">
-
-
-                            <h3 class="mx-3 ">Games</h3>
-
-                        </button>
-                    </a>
-                    <div class="sectionBoxInvis"></div>
-
-                </div>
-
-            </div>
-
-        </section>
-
+        <!-- FOOTER -->
         <footer>
 
             <div class="col-2 position-absolute footerImg d-none d-md-block ">
@@ -210,13 +179,13 @@
                     <div class="col-12 ">
 
                         <a href="privacyPolicy.html">
-                            <button class=" btnShadow">
+                            <button class="footerBtn btnShadow">
                                 Privacy Policy
                             </button>
                         </a>
 
                         <a href="about.html">
-                            <button class=" btnShadow">
+                            <button class="footerBtn btnShadow">
                                 Location
                             </button>
                         </a>
@@ -234,7 +203,8 @@
 
                     <div class="col d-inline text-center align-bottom p2 pb-1 pt-4">
 
-                        <p>Ferret Studios 2023. All Rights Reserved. Website Designed and Developed by Ferret Studios.
+                        <p>Ferret Studios 2023. All Rights Reserved. Website Designed and Developed by Ferret
+                            Studios.
                         </p>
 
                     </div>
