--- a/privacyPolicy-copy.html
+++ b/privacyPolicy-copy.html
@@ -17,9 +17,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferret Studios | Privacy Policy</title>
-    <meta name="description" content="Ferret Studios Home Page">
+    <meta name="description" content="Ferret Studios | Privacy Policy">
 	
-	<link rel="icon" type="" href="FS Icon 64.png" >
+		<link rel="icon" type="" href="FS Icon 64.png" >
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
@@ -36,17 +36,17 @@
 </head>
 
 
-<body class="bg-transparent ">
+<body class="bg-transparent">
 
-    <div class="container ">
+    <div class="container">
 
         <!-- This button will push users to the top of the current page, maybe a later feature once more content is added -->
         <!-- <button class="topBtn btnShadow">
-            <a href="#">
-                <h6>Back To Top</h6>
-                <img src="images/arrow-up 1.png" width="48" height="48" alt="">
-            </a>
-        </button> -->
+                        <a href="#">
+                            <h6>Back To Top</h6>
+                            <img src="images/arrow-up 1.png" width="48" height="48" alt="">
+                        </a>
+                    </button> -->
 
         <header>
             <div class="row ">
@@ -76,114 +76,74 @@
         </header>
 
 
-        <main>
-            <div class="row mt-5 mb-5 HPIntro">
+        <row>
+            <main class="PPLetter">
 
-                <div class="col">
+                <div class="row">
 
-                    <div>
-                        <img src="images/FS Icon 256.png" class="img-fluid oddPictureShadowBlack"
-                            alt="Ferret Studios Logo" width="100">
+                    <!-- Page Title -->
+                    <div class="ms-5 PPTextSpace">
+                        <h3 class=" textShadow ">Privacy Policy</h3>
+                        <h5 class="light">Last updated: 6 May, 2023</h5>
                     </div>
 
-                    <div class="mb-5 mt-1">
-                        <img src="images/Basic Logo4 cropped.png" class="img-fluid " alt="Ferret Studios Logo"
-                            width="500">
-                    </div>
+                    <!-- Page Text -->
+                    <div class="col-10">
 
-                    <div>
-                        <h5 style="font-weight: 400;">Hi! We're a mobile game studio bringing retro gameplay back to the
-                            Google Play Store.</h5>
-                        <h5 style="font-weight: 400;">We do the same thing here with fresh and updated takes on older
-                            gameplay concepts.</h5>
-                    </div>
+                        <h4 class="PPTextSpace ">Key details</h4>
+                        <h6>This website privacy policy describes how Ferret Studios protects and makes use of the
+                            information
+                            you
+                            give the company
+                            when you use this website.</h6>
+                        <h6>If you are asked to provide information when using this website, it will only be used in the
+                            ways
+                            described in this
+                            privacy policy.</h6>
+                        <h6>This policy is updated from time to time. The latest version is published on this page.
+                            This
+                            website
+                            privacy policy was
+                            updated on: 17/04/2023</h6>
+                        <h6>
+                            If you have any questions about this policy, please email us through our
+                            contact-page.
+                        </h6>
 
+                        <h4 class="PPTextSpace ">Introduction</h4>
+                        <h6>
+                            Ferret Studios is processing your personal data on the lawful basis of
+                            legitimate interests
+                            under instruction from our
+                            player base and users.
+                        </h6>
+                        <h6>We do not currently collect data from individuals, users or companies of any
+                            kind in our games or
+                            applications. However our contact page does record data input.
+                        </h6>
+
+                        <h4 class="PPTextSpace ">The data we gather</h4>
+                        <h6>We may collect the following information:</h6>
+                        <h6 class="PPList">• Name and job title.</h6>
+                        <h6 class="PPList">• Contact information including email address.</h6>
+
+                        <h4 class="PPTextSpace ">How we use this data</h4>
+                        <h6>Specifically, we may use data:</h6>
+                        <h6 class="PPList">• For our own internal records.</h6>
+                        <h6 class="PPList">• To improve the products and services we provide.
+                        </h6>
+                        <h6 class="PPList">• To contact you in response to a specific
+                            enquiry.</h6>
+                        <h6 class="PPList">• To customise the website for you.</h6>
+
+                    </div>
                 </div>
 
 
-            </div>
+            </main>
+        </row>
 
 
-        </main>
-
-
-        <main class="row">
-
-            <div class="row banner">
-
-
-                <div class="col-6 ">
-                    <div class="ps-5">
-                        <h3 class="bold mt-5">Cube Dropper</h3>
-                        <h5 class="textShadow">Following the tale of Cube! You fight against the evil wizard Artemus who
-                            seems to hate and fear
-                            you.
-                            Why is this? Watch him close and you may find out. A story of power can never end well if
-                            control
-                            is the only desire.</h5>
-                        <div> <img src="images/cubedropper-screenshot (1).png"
-                                class="img-fluid bannerImg pictureBoxShadow" alt="Cube Dropper Gameplay" width="575">
-                        </div>
-                        <p class="d-inline-flex align-bottom">Genre: Action, Arcade</p>
-                        <div> <img src="images/google-play-badge.png" class="img-fluid mt-2 mb-3 oddPictureShadow"
-                                alt="Google Play Badge" width="161.5">
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-6 mt-5 pe-5 d-flex flex-row-reverse align-self-start">
-
-                    <img style="position:relative; right:10px;" src="images/App Logo Square.png"
-                        class="img-fluid oddPictureShadow " alt="Ferret Studios Logo" width="150">
-                </div>
-
-            </div>
-
-        </main>
-
-
-
-        <section>
-
-            <div class="row d-none d-sm-block">
-
-                <div class="col d-flex justify-content-around">
-
-                    <div class="sectionBoxInvis"></div>
-
-                    <a href="about.html">
-                        <button class="sectionBox text-center">
-
-                            <img src="images/book-open-text.svg" class="img-fluid " alt="Ferret Studios Logo"
-                                width="200" height="200">
-
-
-
-                            <h3 class="ms-3 ">About</h3>
-
-
-                        </button>
-                    </a>
-
-                    <a href="#">
-                        <button class="sectionBox text-center">
-
-                            <img src="images/game-controller.svg" class="img-fluid " alt="Ferret Studios Logo"
-                                width="200" height="200">
-
-
-                            <h3 class="mx-3 ">Games</h3>
-
-                        </button>
-                    </a>
-                    <div class="sectionBoxInvis"></div>
-
-                </div>
-
-            </div>
-
-        </section>
 
         <footer>
 
@@ -210,13 +170,13 @@
                     <div class="col-12 ">
 
                         <a href="privacyPolicy.html">
-                            <button class=" btnShadow">
+                            <button class="footerBtn btnShadow">
                                 Privacy Policy
                             </button>
                         </a>
 
                         <a href="about.html">
-                            <button class=" btnShadow">
+                            <button class="footerBtn btnShadow">
                                 Location
                             </button>
                         </a>
@@ -226,6 +186,7 @@
                                 Contact
                             </button>
                         </a>
+
                     </div>
 
                 </div>
@@ -244,7 +205,6 @@
         </footer>
 
         <div class="row pageBottom"></div>
-
 
     </div>
 
