--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -17,9 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferret Studios | Privacy Policy</title>
-    <meta name="description" content="Ferret Studios Home Page">
-	
-	<link rel="icon" type="" href="FS Icon 64.png" >
+    <meta name="description" content="Ferret Studios | Privacy Policy">
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
@@ -36,17 +34,17 @@
 </head>
 
 
-<body class="bg-transparent ">
+<body class="bg-transparent">
 
-    <div class="container ">
+    <div class="container">
 
         <!-- This button will push users to the top of the current page, maybe a later feature once more content is added -->
         <!-- <button class="topBtn btnShadow">
-            <a href="#">
-                <h6>Back To Top</h6>
-                <img src="images/arrow-up 1.png" width="48" height="48" alt="">
-            </a>
-        </button> -->
+                        <a href="#">
+                            <h6 class="PPTextSpace">Back To Top</h6>
+                            <img src="images/arrow-up 1.png" width="48" height="48" alt="">
+                        </a>
+                    </button> -->
 
         <header>
             <div class="row ">
@@ -76,114 +74,76 @@
         </header>
 
 
-        <main>
-            <div class="row mt-5 mb-5 HPIntro">
+        <row>
+            <main class="PPLetter">
 
-                <div class="col">
+                <div class="row">
 
-                    <div>
-                        <img src="images/FS Icon 256.png" class="img-fluid oddPictureShadowBlack"
-                            alt="Ferret Studios Logo" width="100">
+                    <!-- Page Title -->
+                    <div class="ms-5 PPTextSpace">
+                        <h3 class=" textShadow ">Privacy Policy</h3>
+                        <h5 class="light">Last updated: 6 May, 2023</h5>
                     </div>
 
-                    <div class="mb-5 mt-1">
-                        <img src="images/Basic Logo4 cropped.png" class="img-fluid " alt="Ferret Studios Logo"
-                            width="500">
-                    </div>
+                    <!-- Page Text -->
+                    <div class="col-10">
 
-                    <div>
-                        <h5 style="font-weight: 400;">Hi! We're a mobile game studio bringing retro gameplay back to the
-                            Google Play Store.</h5>
-                        <h5 style="font-weight: 400;">We do the same thing here with fresh and updated takes on older
-                            gameplay concepts.</h5>
-                    </div>
+                        <!-- <h4 class="PPTextSpace ">Key Details</h4> -->
+                        <h6 class="PPTextSpace">At Ferret Studios, we take your privacy very seriously. We understand
+                            that your personal
+                            information is sensitive and
+                            private, and we want to assure you that we will never collect or store any information about
+                            you or your gameplay.</h6>
+                        <h6 class="PPTextSpace">We do not use any tracking cookies or analytics software that might
+                            monitor your online
+                            activity. We will not collect
+                            your IP address or any other personal identifiable information about you while you play our
+                            games.
+                        </h6>
+                        <h6 class="PPTextSpace">When you play our games, we do not ask you for any personal information,
+                            such as your name,
+                            email address, or other
+                            contact details. You are free to play our games without providing any personal information.
+                        </h6>
+                        <h6 class="PPTextSpace">
+                            We will not share any information that we do not collect. We will not sell, rent, or lease
+                            any information about you to
+                            third parties. We believe that privacy is a fundamental human right, and we are committed to
+                            upholding that right for
+                            our players.
+                        </h6>
 
+
+                        <h6 class="PPTextSpace">
+                            Please note that some third-party services, such as app stores, may collect certain
+                            information about you when you
+                            download or use our games. We have no control over these third-party services and their
+                            privacy policies. Please review
+                            their privacy policies if you have any concerns.
+
+                        </h6>
+
+                        <h6 class="PPTextSpace">At Ferret Studios, we are committed to providing you with fun and
+                            entertaining games without
+                            compromising your privacy.
+                            If you have any questions about our privacy policy, please do not hesitate to contact us at
+                            privacy@ferretstudios.com.
+
+                        </h6>
+
+                        <h6 class="PPTextSpace">
+                            Thank you for playing our games!
+
+                        </h6>
+
+                    </div>
                 </div>
 
 
-            </div>
+            </main>
+        </row>
 
 
-        </main>
-
-
-        <main class="row">
-
-            <div class="row banner">
-
-
-                <div class="col-6 ">
-                    <div class="ps-5">
-                        <h3 class="bold mt-5">Cube Dropper</h3>
-                        <h5 class="textShadow">Following the tale of Cube! You fight against the evil wizard Artemus who
-                            seems to hate and fear
-                            you.
-                            Why is this? Watch him close and you may find out. A story of power can never end well if
-                            control
-                            is the only desire.</h5>
-                        <div> <img src="images/cubedropper-screenshot (1).png"
-                                class="img-fluid bannerImg pictureBoxShadow" alt="Cube Dropper Gameplay" width="575">
-                        </div>
-                        <p class="d-inline-flex align-bottom">Genre: Action, Arcade</p>
-                        <div> <img src="images/google-play-badge.png" class="img-fluid mt-2 mb-3 oddPictureShadow"
-                                alt="Google Play Badge" width="161.5">
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="col-6 mt-5 pe-5 d-flex flex-row-reverse align-self-start">
-
-                    <img style="position:relative; right:10px;" src="images/App Logo Square.png"
-                        class="img-fluid oddPictureShadow " alt="Ferret Studios Logo" width="150">
-                </div>
-
-            </div>
-
-        </main>
-
-
-
-        <section>
-
-            <div class="row d-none d-sm-block">
-
-                <div class="col d-flex justify-content-around">
-
-                    <div class="sectionBoxInvis"></div>
-
-                    <a href="about.html">
-                        <button class="sectionBox text-center">
-
-                            <img src="images/book-open-text.svg" class="img-fluid " alt="Ferret Studios Logo"
-                                width="200" height="200">
-
-
-
-                            <h3 class="ms-3 ">About</h3>
-
-
-                        </button>
-                    </a>
-
-                    <a href="#">
-                        <button class="sectionBox text-center">
-
-                            <img src="images/game-controller.svg" class="img-fluid " alt="Ferret Studios Logo"
-                                width="200" height="200">
-
-
-                            <h3 class="mx-3 ">Games</h3>
-
-                        </button>
-                    </a>
-                    <div class="sectionBoxInvis"></div>
-
-                </div>
-
-            </div>
-
-        </section>
 
         <footer>
 
@@ -210,13 +170,13 @@
                     <div class="col-12 ">
 
                         <a href="privacyPolicy.html">
-                            <button class=" btnShadow">
+                            <button class="footerBtn btnShadow">
                                 Privacy Policy
                             </button>
                         </a>
 
                         <a href="about.html">
-                            <button class=" btnShadow">
+                            <button class="footerBtn btnShadow">
                                 Location
                             </button>
                         </a>
@@ -244,7 +204,6 @@
         </footer>
 
         <div class="row pageBottom"></div>
-
 
     </div>
 
