--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferret Studios | Privacy Policy</title>
-    <meta name="description" content="Ferret Studios Home Page">
+    <meta name="description" content="Ferret Studios About Page">
 	
-	<link rel="icon" type="" href="FS Icon 64.png" >
+		<link rel="icon" type="" href="FS Icon 64.png" >
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
@@ -75,116 +75,97 @@
             </div>
         </header>
 
+        <div>
+            <div class="PPLetter ">
 
-        <main>
-            <div class="row mt-5 mb-5 HPIntro">
+                <div class="row">
 
-                <div class="col">
-
-                    <div>
-                        <img src="images/FS Icon 256.png" class="img-fluid oddPictureShadowBlack"
-                            alt="Ferret Studios Logo" width="100">
-                    </div>
-
-                    <div class="mb-5 mt-1">
-                        <img src="images/Basic Logo4 cropped.png" class="img-fluid " alt="Ferret Studios Logo"
-                            width="500">
-                    </div>
-
-                    <div>
-                        <h5 style="font-weight: 400;">Hi! We're a mobile game studio bringing retro gameplay back to the
-                            Google Play Store.</h5>
-                        <h5 style="font-weight: 400;">We do the same thing here with fresh and updated takes on older
-                            gameplay concepts.</h5>
+                    <div class="ms-5">
+                        <h3 class=" textShadow PPTextSpace ">About</h3>
+                        <!-- <h5 class="light"></h5> -->
                     </div>
 
                 </div>
 
+                <div class="row PPTextSpaceTitle mb-5 ">
 
-            </div>
+                    <div class="col-12 col-xl-6 ">
 
+                        <h4 class="PPTextSpace bold">We are Ferret Studios</h4>
+                        <h5>
+                            Ferret Studios is a Video Game Development company created through the spare time of a
+                            lowly
+                            salesmen. Each game is a
+                            passion project that is designed to connect with players around the world with stories
+                            of
+                            characters, big or small, that
+                            we as a company feel the world should see.
+                        </h5>
 
-        </main>
+                    </div>
 
-
-        <main class="row">
-
-            <div class="row banner">
-
-
-                <div class="col-6 ">
-                    <div class="ps-5">
-                        <h3 class="bold mt-5">Cube Dropper</h3>
-                        <h5 class="textShadow">Following the tale of Cube! You fight against the evil wizard Artemus who
-                            seems to hate and fear
-                            you.
-                            Why is this? Watch him close and you may find out. A story of power can never end well if
-                            control
-                            is the only desire.</h5>
-                        <div> <img src="images/cubedropper-screenshot (1).png"
-                                class="img-fluid bannerImg pictureBoxShadow" alt="Cube Dropper Gameplay" width="575">
+                    <div class="col d-none d-lg-flex justify-content-center">
+                        <div>
+                            <img src="images/FS Icon 256.png" class="img-fluid " alt="Ferret Studios Logo" width="400">
                         </div>
-                        <p class="d-inline-flex align-bottom">Genre: Action, Arcade</p>
-                        <div> <img src="images/google-play-badge.png" class="img-fluid mt-2 mb-3 oddPictureShadow"
-                                alt="Google Play Badge" width="161.5">
+
+                    </div>
+                </div>
+
+                <div class="row PPTextSpaceTitle mb-5 ">
+
+                    <!-- <div class="col-12 col-xl-6"></div> add on text-end as well -->
+                    <div class="col-12 col-xl-6">
+
+                        <div>
+                            <h4 class="PPTextSpace  bold mt-0 ">Why The Name?</h4>
+                            <h5 class="">
+                                Do you not like ferrets? Ferrets are great! It was also an old username from back in the
+                                day and I thought that would encompass the kind of games that this company will make, at
+                                the time of creating the company that is.
+                            </h5>
                         </div>
+
                     </div>
 
                 </div>
 
-                <div class="col-6 mt-5 pe-5 d-flex flex-row-reverse align-self-start">
+                <div class="row PPTextSpaceTitle mb-5 ">
 
-                    <img style="position:relative; right:10px;" src="images/App Logo Square.png"
-                        class="img-fluid oddPictureShadow " alt="Ferret Studios Logo" width="150">
+                    <div class="col-12 col-xl-6 ">
+
+                        <h4 class="PPTextSpace mt-0 bold">Location</h4>
+                        <h5>
+                            Currently based in Gloucestershire, England 🇬🇧 However, we will shortly be moving
+                            to Bristol , England.
+                        </h5>
+
+                    </div>
+
+                    <div class="col-12 col-lg-6  mt-5 mt-lg-0">
+                        <div class="d-flex justify-content-center ">
+
+                            <iframe class="btnShadow mapBorder"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78832.08147630758!2d-2.243963944863404!3d51.87003857310303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48705335954a60bd%3A0x37ec886359412762!2sGloucestershire!5e0!3m2!1sen!2suk!4v1683558046412!5m2!1sen!2suk"
+                                width="400" height="300" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+
+                        </div>
+
+                    </div>
                 </div>
 
             </div>
 
-        </main>
+            <div class="row pageBottom"></div>
+        </div>
 
 
 
-        <section>
-
-            <div class="row d-none d-sm-block">
-
-                <div class="col d-flex justify-content-around">
-
-                    <div class="sectionBoxInvis"></div>
-
-                    <a href="about.html">
-                        <button class="sectionBox text-center">
-
-                            <img src="images/book-open-text.svg" class="img-fluid " alt="Ferret Studios Logo"
-                                width="200" height="200">
 
 
-
-                            <h3 class="ms-3 ">About</h3>
-
-
-                        </button>
-                    </a>
-
-                    <a href="#">
-                        <button class="sectionBox text-center">
-
-                            <img src="images/game-controller.svg" class="img-fluid " alt="Ferret Studios Logo"
-                                width="200" height="200">
-
-
-                            <h3 class="mx-3 ">Games</h3>
-
-                        </button>
-                    </a>
-                    <div class="sectionBoxInvis"></div>
-
-                </div>
-
-            </div>
-
-        </section>
-
+        <!-- FOOTER -->
         <footer>
 
             <div class="col-2 position-absolute footerImg d-none d-md-block ">
@@ -210,13 +191,13 @@
                     <div class="col-12 ">
 
                         <a href="privacyPolicy.html">
-                            <button class=" btnShadow">
+                            <button class="footerBtn btnShadow">
                                 Privacy Policy
                             </button>
                         </a>
 
                         <a href="about.html">
-                            <button class=" btnShadow">
+                            <button class="footerBtn btnShadow">
                                 Location
                             </button>
                         </a>
