--- a/about.html
+++ b/about.html
@@ -121,8 +121,7 @@
                             <h4 class="PPTextSpace  bold mt-0 ">Why The Name?</h4>
                             <h5 class="">
                                 Do you not like ferrets? Ferrets are great! It was also an old username from back in the
-                                day and I thought that would encompass the kind of games that this company will make, at
-                                the time of creating the company that is.
+                                day, that mindset will encompass the kind of games that this company will make.
                             </h5>
                         </div>
 
