Updated icon for pages

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     <title>Ferret Studios | Privacy Policy</title>
     <meta name="description" content="Ferret Studios About Page">
 	
-		<link rel="icon" type="" href="FS Icon 64.png" >
-
+	<link rel="icon" type="" href="images/FS Icon 64.png" >
+	
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="bootstrap.min.css">
