--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <title>Ferret Studios | Privacy Policy</title>
     <meta name="description" content="Ferret Studios Contact Page">
 	
-		<link rel="icon" type="" href="FS Icon 64.png" >
+	<link rel="icon" type="" href="images/FS Icon 64.png" >
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
