--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -18,6 +18,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferret Studios | Privacy Policy</title>
     <meta name="description" content="Ferret Studios | Privacy Policy">
+	
+		<link rel="icon" type="" href="images/FS Icon 64.png" >
 
     <!-- CSS -->
     <link rel="stylesheet" href="reset.css">
